[package]
name = "mits_ndk_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.25.3" }

[build-dependencies]
uniffi = { version = "0.25.3", features = [ "build" ] }

[lib]
name = "mits_ndk_lib"
crate-type=["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"


